--- a/MvvmExampleAndroid/Resources/layout/activity_main.xml
+++ b/MvvmExampleAndroid/Resources/layout/activity_main.xml
@@ -1,7 +1,40 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:local="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-</RelativeLayout>
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+   <TextView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text="SubTotal" />
+    <EditText
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          local:MvxBind="Text SubTotal" />
+    <TextView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text="Generosity" />
+    <SeekBar
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:max="100"
+          local:MvxBind="Progress Generosity" />
+    <View
+          android:layout_width="match_parent"
+          android:layout_height="1dp"
+          android:background="#ffff00" />
+    <TextView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text="Tip to leave" />
+    <TextView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          local:MvxBind="Text Tip" />
+
+</LinearLayout>
