--- a/MvvmExampleAndroid/Resources/layout/activity_main.xml
+++ b/MvvmExampleAndroid/Resources/layout/activity_main.xml
@@ -37,4 +37,12 @@
           android:layout_height="wrap_content"
           local:MvxBind="Text Tip" />
 
+    <Button
+        android:id="@+id/NextButton"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginTop="50dp"
+        android:layout_marginHorizontal="20dp"
+        android:text="List Example"/>
+
 </LinearLayout>
